German Translation Update (Filters)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7796 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -496,19 +496,19 @@ foxtrick.transferfilter.delete_filter_ask=Diesen Filter wirklich löschen?
 foxtrick.transferfilter.save_new_filter=Filter speichern
 foxtrick.transferfilter.Foxtrick_Filters=FoxTrick Filter
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+#Filter
+Filters=Filter
+Filters.filter=Ok
+Filters.clear=Zurücksetzen
+Filters.noFilter=Kein Filter
+Filters.none=Keine
+Filters.days=Tage
+Filters.tsi=TSI
+Filters.stamina=Kondition
+Filters.Form=Form
+Filters.XP=Erfahrung
+Filters.specialty=Spezialität
+Filters.stars=Sterne
 
 #Locales for date and time
 #Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
