--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -3,6 +3,15 @@
 #  Original by eekels  [teamid=768188] (r4899)
 # Additions by CoRrRan [teamid=144536] (r7205)
 
+# Hints:
+# translate the right side of the = sign.
+# the left side are idenitifiers for internal foxtrick use. leave them unchanged.
+# sentences starting with # are comments. leave them unchanged
+
+# Text with %-sign eg %s will be automatically replaced by the approriate text.
+# Eg in "The price is %s." %s will be replaced by the selected amount of money.
+# Thus, you need to include those %s entries into your text accordingly
+
 #declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
 direction=ltr
 
@@ -22,7 +31,7 @@ foxtrick.MoveLinks.desc=Verplaats de informatie over de competitie en het vlagge
 foxtrick.AttVsDef.desc=Voeg een vergelijking tussen aanval en verdediging toe aan de wedstrijdpagina
 foxtrick.AttVsDef.oldstyle.desc=Oude stijl
 foxtrick.AttVsDef.newstyle.desc=Nieuwe stijl
-
+foxtrick.AttVsDef.oldstyleifkseparated.desc=Oude stijl (met gescheiden ind. vrije trappen)
 #Ratings
 foxtrick.Ratings.desc=Voeg ratings toe aan de wedstrijdpagina
 foxtrick.Ratings.HatStats.desc=HatStats
@@ -68,12 +77,14 @@ foxtrick.ForumYouthIcons.debug.desc=Toon icoon voor FoxTrick debug log
 foxtrick.ForumYouthIcons.settings.desc=Toon icoon voor FoxTrick instellingen
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Vervang FoxTrick HT-ML tags door HTML tags (bv 'pre' element)
+foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Verberg geneste quotes in een 'spoiler' tag. Specificeer vanaf welk niveau dit moet gebeuren hieronder:
 foxtrick.CopyPostID.desc=Toon een link om het ID van een bericht te kopiëren
-
 foxtrick.CopyPosting.desc=Toon een knop om een bericht inclusief referenties te kopiëren
 foxtrick.ShowForumPrefButton.desc=Toon snelkoppeling naar forumvoorkeuren op alle forumpagina's
+foxtrick.Links.desc=Basis module die belangrijk is om andere links goed te laten werken.
 foxtrick.LinksLeague.desc=Toon een aantal nuttige externe links op de competitiepagina
 foxtrick.LinksTeam.desc=Toon een aantal nuttige externe links op de teampagina
+foxtrick.LinksTeam.AlltidTeamCompare.desc=Voegt vergelijkfuncties van Alltid toe.
 foxtrick.LinksCountry.desc=Toon een aantal nuttige externe links op de landenpagina
 foxtrick.LinksChallenges.desc=Toon een aantal nuttige externe links op de uitdagingenpagina
 foxtrick.LinksEconomy.desc=Toon een aantal nuttige externe links op de financiënpagina
@@ -192,8 +203,6 @@ foxtrick.ForumPresentation.Forum_Link_Grey_Icons.desc=Toon iconen in plaats van 
 foxtrick.ForumPresentation.moved_avatarinfo_fix.desc=Repareer verkeerd geplaatste avatar als de berichtkop te vol raakt
 foxtrick.HeaderFix.RemoveFlicker.desc=Verwijder het flikkeren van het forum in Firefox 3.5
 foxtrick.SkinPlugin.desc=Voeg je eigen CSS skin toe aan Hattrick
-
-
 foxtrick.CurrencyConverter.desc=Reken HT valuta om
 foxtrick.MovePlayerStatement.desc=Verplaats een spelersverklaring naar de afbeelding van een speler. Indien afbeeldingen uitgeschakeld zijn, wordt de spelersverklaring niet getoond
 foxtrick.TickerColoring.desc=Kleur de verschillende gebeurtenissen in de ticker
@@ -230,6 +239,7 @@ foxtrick.NewMail.NotifyForum.desc=Laat een melding zien als er nieuwe forum beri
 foxtrick.CopyYouth.desc=Kopieer functies voor jeugd trainingsrapporten en broncodes
 foxtrick.CopyYouth.TrainingReport.desc=Trainings rapport
 foxtrick.CopyYouth.ScoutComment.desc=Scout bericht
+foxtrick.CopyYouth.RejectedToHTY.desc=Kopieer het commentaar van je scout als je een speler afwijst.
 foxtrick.CopyYouth.PlayerSource.desc=Spelers broncode
 foxtrick.CopyYouth.FixturesSource.desc=Wedstrijdprogramma broncode
 foxtrick.PlayerBirthday.desc=Toon laatste en volgende verjaardag in spelersoverzicht
@@ -282,7 +292,6 @@ foxtrick.SkillTable.ColouredYouth.desc=Kleur de vaardigheden van jeugdspelers
 foxtrick.HighlightCupwins.desc=Markeer de winnaars op de bekerwedstrijdenpagina
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Markeer wedstrijden gewonnen door het team wat lager op de ranglijst staat
 foxtrick.SkillTranslation.desc=Toon Engelse vertalingen van de vaardigheden op de heplpagina's
-
 #CountryList
 foxtrick.CountryList.desc=Aanpassingen voor landennamen
 foxtrick.CountryList.SelectBoxes.desc=Vervang de Engelstalige landennamen voor hun eigen landennamen in selectievelden
@@ -322,6 +331,7 @@ foxtrick.HTMSPoints.desc=Laat de trainingspunten zien voor een speler, berekend 
 foxtrick.HTMSPoints.AddToPlayer.desc=Laat de HTMS punten zien op de individuele speler-pagina
 foxtrick.HTMSPoints.AddToSearchResult.desc=Laat de HTMS punten zien op de Transfer zoek lijst
 foxtrick.HTMSPoints.AddToPlayerList.desc=Laat de HTMS punten zien op de spelers-pagina
+foxtrick.TableOfStatisticalTruth.desc=Statistische voorspelling van de eindstand van een divisie (alleen voor beeindigde seizoenen).
 foxtrick.FriendlyInterface.desc=Aanpassingen om een overzichtelijkere interface te krijgen
 foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Laat de naam van een speler zien zonder ronde haakjes in de wedstrijd opstellings-pagina
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Laat een snelkoppeling zien naar het nationale team waar een speler voor geselecteerd is
@@ -339,6 +349,19 @@ foxtrick.ShowLineupSet.Ownerless.desc=Markeer teams die eigenaarloos zijn
 foxtrick.ShowLineupSet.Winning.desc=Markeer teams die in de vorige ronde hun wedstrijd gewonnen hebben
 foxtrick.SupporterStatsEnhancements.desc=Markeer eigen spelers in supporter statistieken
 foxtrick.MobileEnhancements.desc=Verbeteringen voor mobiele toestellen
+foxtrick.MatchOrderInterface.desc=Aanpassingen van de opstellings-pagina.
+foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Markeer spelers die in de laatste wedstrijd hebben gespeeld, en laat de positie en duur dat de speler meegespeeld heeft zien in de detail informatiebox.
+foxtrick.MatchOrderInterface.Specialties.desc=Laat spelers' specialiteiten zien
+foxtrick.MatchOrderInterface.StayOnPage.desc=Blijf op de opstellings-pagina na opslaan
+foxtrick.MatchOrderInterface.SwapPositions.desc=Voeg een link toe om spelers over de as van het veld te wisselen.
+foxtrick.MatchSimulator.desc=Voeg een wedstrijden simulator toe aan de opstellings-pagina.
+foxtrick.MatchSimulator.RatingsOnTop.desc=Laat de ratings voorspelling bovenop de opstelling staan
+foxtrick.MatchSimulator.RatingsBellow.desc=Plaats de ratings voorspelling onder de opstelling
+foxtrick.MatchSimulator.RatingsRight.desc=Plaats de ratings voorspelling rechts van de opstelling
+foxtrick.HeaderToggle.desc=Klik op bepaalde headers om de sectie te verbergen of juist te zien. Onthoudt de laatst gekozen instelling, gebaseerd op pagina & header titel.
+foxtrick.Filter.desc=Voeg filters toe aan de lijst met top spelers
+foxtrick.RatingsRange.desc=Laat gemiddelde ratings in de statistieken in het 0-20 bereik zien
+
 # -----------------------------------------------------------------------------
 
 
@@ -381,6 +404,9 @@ foxtrick.TeamStats.TransferListed.label=Op de transferlijst
 foxtrick.TeamStats.Pictures.label=Gezichten
 foxtrick.TeamStats.PlayedLatest.label=Speelde in de laatste wedstrijd
 foxtrick.TeamStats.NotPlayedLatest.label=Speelde niet in de laatste wedstrijd
+foxtrick.TeamStats.ActivePlayers.label=Actieve spelers
+foxtrick.TeamStats.HomeGrownPlayers.label=Eigen spelers
+foxtrick.TeamStats.PurchasedPlayers.label=Gekochte spelers
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -462,11 +488,28 @@ ForumSpecialBBCode.table=Voeg 'tabel' formatterings labels toe, or converteer ge
 ForumSpecialBBCode.tableSeparator=Converteer "%s" naar cellen
 ForumSpecialBBCode.enterSeparator=Voeg een aangepast scheidingsteken toe
 
+
+ShowNestedQoutes=Laat geneste quotes zien
+
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Geef filternaam:
 foxtrick.transferfilter.delete_filter_ask=Weet je zeker dat je deze filter wilt verwijderen?
 foxtrick.transferfilter.save_new_filter=Sla nieuwe filter op
 foxtrick.transferfilter.Foxtrick_Filters=FoxTrick filters
+
+#Filter
+Filters=Filters
+Filters.filter=Ok
+Filters.clear=Verwijder
+Filters.noFilter=Geen filter
+Filters.none=Geen
+Filters.days=Dagen
+Filters.tsi=TSI
+Filters.stamina=Conditie
+Filters.Form=Vorm
+Filters.XP=Ervaring
+Filters.specialty=Specialiteit
+Filters.stars=Sterren
 
 #Locales for date and time
 #Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
@@ -494,6 +537,13 @@ match.type.nt.competitive=World Cup
 match.type.youth.league=Jeugdcompetitie
 match.type.youth.friendly=Vriendschappelijke jeugdwedstrijd
 match.type.youth.friendly.cup=Vriendschappelijke jeugdwedstrijd (Bekerregels)
+
+matchOrder.noMatchSelected=Geen wedstrijd geselecteerd
+matchOrder.comparedTo=Vergelijk met:
+matchOrder.previousPrediction=Vorige vergelijking
+matchOrder.AddMatchManually=Voeg een wedstrijd handmatig toe
+matchOrder.swapPositions=Wissel posities
+
 
 #Skills
 Playmaking=Positiespel
@@ -532,6 +582,40 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+match.pos.kp=Keeper
+match.pos.kp.abbr=KP
+match.pos.lb=Linksback
+match.pos.lb.abbr=LB
+match.pos.lcd=Linker centrale verdediger
+match.pos.lcd.abbr=LCV
+match.pos.mcd=Midden centrale verdediger
+match.pos.mcd.abbr=MCV
+match.pos.rcd=Rechter centrale verdediger
+match.pos.rcd.abbr=RCV
+match.pos.rb=Rechtsback
+match.pos.rb.abbr=RB
+match.pos.lw=Linkshalf
+match.pos.lw.abbr=LW
+match.pos.lcm=Linker centrale middenvelder
+match.pos.lcm.abbr=LCM
+match.pos.mcm=Midden centrale middenvelder
+match.pos.mcm.abbr=MCM
+match.pos.rcm=Rechter centrale middenvelder
+match.pos.rcm.abbr=RCM
+match.pos.rw=Rechtshalf
+match.pos.rw.abbr=RW
+match.pos.lf=Linker aanvaller
+match.pos.lf.abbr=LA
+match.pos.mf=Centrale aanvaller
+match.pos.mf.abbr=CA
+match.pos.rf=Rechter aanvaller
+match.pos.rf.abbr=RA
+
+match.role.setPieces=Vrije trappen specialist
+match.role.setPieces.abbr=SP
+match.role.captain=Aanvoerder
+match.role.captain.abbr=Aanv.
+
 General=Algemeen
 
 PlayerNumber=Rugnummer
@@ -558,6 +642,11 @@ Stamina.abbr=Co
 Form=Vorm
 Form.abbr=Vo
 
+Loyality=Loyaliteit
+Loyality.abbr=Lo
+MotherClubBonus=Moederclub bonus
+MotherClubBonus.abbr=MB
+
 Status=Status
 Status.abbr=Status
 
@@ -573,8 +662,13 @@ Last_match=Laatste wedstrijd
 Last_match.abbr=Laatste
 Last_stars=Laatste rating
 Last_stars.abbr=Rat
+Last_stars_EndOfGame=Laatste sterren aan het eind van de wedstrijd
+Last_stars_EndOfGame.abbr=Rt
+Last_stars_decline=Laatste sterren aftakeling
+Last_stars_decline.abbr=Versch.
 Last_position=Laatste positie
 Last_position.abbr=Pos
+Last_match_played_as=Heeft %1 min als %2 gespeeld in z'n laatste wedstrijd.
 
 Bruised=Pleister
 Bruised.abbr=Ple
@@ -668,7 +762,6 @@ notify.newForumMessage=Je hebt %s nieuw(e) antwoord(en) op een eigen forum-beric
 
 htLive=HT Live
 
-
 foxtrick.modules_allpages=Modules die op alle pagina's werken
 HTLanguageChanged=In de FoxTrick instellingen heb je ingesteld staan dat de taal automatisch gekozen moet worden. Jouw FoxTrick taal is nu ingesteld op: %s.
 
@@ -703,6 +796,10 @@ CopyYouth.playerSource.copied=Speler broncode is gekopieerd.
 CopyYouth.fixturesSource=Kopieer wedstrijdschema.
 CopyYouth.fixturesSource.copied=Wedstrijdschema is gekopieerd.
 CopyYouth.goto=Ga naar %s
+
+MatchReportFormat.lineup=Opstelling
+MatchReportFormat.halfTime=Rust
+MatchReportFormat.fullTime=Einde wedstrijd
 
 CopySelected.desc=Kopieer selectie met CTRL+C.
 SpecialPaste.desc=Plak met SHIFT+Linker muis klik
@@ -805,6 +902,7 @@ Youth=Jeugd
 team.status.booked=Vriendschappelijk wedstrijd geregeld
 ShowFriendlyBooked.ShowFriendlies=Laat vriendschappelijk zien
 
+
 # TransferSearchResultFilters
 TransferSearchResultFilters.hideBruised=Verberg pleisters
 TransferSearchResultFilters.hideInjured=Verberg blessures
@@ -821,7 +919,6 @@ foxtrick.RapidId.ViewById=Bekijk op ID
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Wissel de weergave van de tabel
 foxtrick.SkillTable.Add_homegrown_title=Voeg alle jeugdspelers toe
-
 foxtrick.SkillTable.showTimeInClub_title=Laat de tijd zien sinds de speler bij het senioren team speelt
 foxtrick.SkillTable.detach=Koppel los
 
@@ -837,6 +934,18 @@ HTMSPrediction.prediction=Voorspeld resultaat
 HTMSPrediction.winDrawLoss=winst/gelijkspel/verlies
 HTMSPrediction.title=Wedstrijdanalyse door HTMS
 HTMSPrediction.changePrediction=Wijzig voorspelling
+HTMSPrediction.team=Team
+
+#htms table of statistical truth
+truthTable.table=HTMS Tabel met statistische 'waarheid'
+truthTable.predicted_position=#
+truthTable.name=Team
+truthTable.real_position=Echte pos.
+truthTable.real_points=Echte punten
+truthTable.predicted_points=Voorspelde punten
+truthTable.difference=±
+truthTable.notAvailableYet=Data nog niet beschikbaar. Ga naar HTMS om de data te genereren
+truthTable.tableAtHTMS=Deze tabel op de HTMS website
 
 #HTMSPoints
 HTMSPoints=HTMS Punten:
@@ -886,13 +995,15 @@ LocalTime.hattrick.title=Tijd in Hattrick tijdzone. Klik op de klok om te wissel
 LocalTime.local=Local time
 LocalTime.local.title=Tijd in locale tijdzone. Klik op de klok om te wisselen naar Hattrick tijdzone tijd.
 
+# Links
+Links.feeds=Feed met lijst van snelkoppelingen (gescheiden met regeleindes)
+
 #actions
 Copy=Kopieer
 View=Bekijk
 Switch_view=Wissel weergave
 Detach=Koppel los
 AddHomegrown=Voeg eigen jeugdspelers toe
-
 showTimeInClub=Laat tijd bij club zien
 Filter=Filter
 sort.up=Omhoog
@@ -937,6 +1048,7 @@ oauth.link=Haal een verificatiecode op bij chpp.hattrick.org
 oauth.success=FoxTrick is succesvol geauthoriseerd! Ververs deze pagina om alle functies van FoxTrick te kunnen benutten.
 
 api.failure=Er is een fout opgetreden tijdens het ophalen van data van Hattrick. Je moet FoxTrick toegang verschaffen tot je team data. Als je dit al wel gedaan hebt, controleer je netwerk connectiviteit of probeer het later nog eens.
+api.serverUnavailable=Server niet beschikbaar
 
 exception.error=Fout %s
 
@@ -975,7 +1087,8 @@ tab.about=Over
 tab.changes=Veranderingen
 tab.help=Help
 
-
+foxtrick.prefs.setup=Instellingen
+foxtrick.prefs.setup.desc=Dit zijn de instellingen zoals Foxtrick ze gevonden heeft. Als het niet klopt {please report}.
 foxtrick.prefs.setup.locale=Taal
 foxtrick.prefs.setup.dateFormat=Datum
 foxtrick.prefs.setup.country=Land
@@ -1008,8 +1121,12 @@ link.bugTracker=Rapporteer een bug
 link.hattrickForum=FoxTrick forum in Hattrick
 link.screenshots=Screenshots
 link.nightlyFirefox=Ontwikkelingsversies voor Firefox
-link.nightlyChrome=Ontwikkelingsversies for Google Chrome
-link.recentChanges=Recente veranderingen
+link.nightlyChrome=Ontwikkelingsversies voor Google Chrome
+link.nightlyOpera=Ontwikkelingsversies voor Opera
+link.nightlySafari=Ontwikkelingsversies voor Safari
+link.recentChanges=Recent changes
+
+module.link=Je kunt deze link kopieren en plakken in het forum om hier terecht te komen
 
 foxtrick.showReleaseNotes=Laat veranderingen aan FoxTrick zien na een update
 foxtrick.versionReleaseNotes=Laat de notities van veranderingen zien voor:
