Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7821 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -72,6 +72,7 @@ foxtrick.ForumYouthIcons.youth_series.desc=Додаје иконицу за ИД
 foxtrick.ForumYouthIcons.enlarge_input.desc=Повећава поље за поруке ради лакшег писања.
 foxtrick.ForumYouthIcons.pre.desc=Додаје иконицу за Форум 'pre'формат (за постовање HTML тагова) (за девелопере).
 foxtrick.ForumYouthIcons.table.desc=Додаје иконицу за прављење табела на Форуму.
+foxtrick.ForumYouthIcons.symbols.desc=Додаје иконицу за симболе наведене испод. Карактери груписани са ' ' се третирају као један симбол.
 foxtrick.ForumYouthIcons.debug.desc=Додаје иконицу за 'FoxTrick Log'
 foxtrick.ForumYouthIcons.settings.desc=Додаје иконицу за постовање Фокстрик подешавања
 #FormatPostingText
@@ -486,6 +487,8 @@ ForumSpecialBBCode.pre=додај 'pre' формат таг
 ForumSpecialBBCode.table=додај тагове за табелу.Нови ред раздваја врсте а ћелије се тренутно одвајају знаком "%s"
 ForumSpecialBBCode.tableSeparator=Ћелије раздвој знаком "%s"
 ForumSpecialBBCode.enterSeparator=Убаци сопствени знак (сепаратор)
+ForumSpecialBBCode.forumSymbol=Убаци "%s"
+ForumSpecialBBCode.symbols=Убаци симбол: %s
 
 
 ShowNestedQoutes=Прикажи скривене цитате
@@ -542,6 +545,9 @@ matchOrder.comparedTo=У поређењу са:
 matchOrder.previousPrediction=Претходно предвиђање
 matchOrder.AddMatchManually=Додај други меч
 matchOrder.swapPositions=Замени стране
+matchOrder.options=Опције
+matchOrder.staminaDiscount=Умањење кондиције
+matchOrder.summary=Укупно
 
 
 #Skills
