Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7849 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -79,6 +79,12 @@ foxtrick.ForumYouthIcons.settings.desc=Додаје иконицу за пост
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Замењује Фокстрикове HT-ML тагове, HTML таговима (на пример: [pre] element) (за девелопере).
 foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Приказује цитате у постовима као споилер. Упишите број нивоа цитата који желите да буде замењен споилерима у поље испод.
+#EmbedMedia
+foxtrick.EmbedMedia.desc=Препознаје линкове ка медија фајловима и уграђује их директно у сајт. (Експериментална опција)
+foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Угради YouTube видео фајлове
+foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Угради Vimeo видео фајлове
+foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=Угради FunnyOrDie видео фајлове
+#
 foxtrick.CopyPostID.desc=Преусмеравање ПостИД-а.
 foxtrick.CopyPosting.desc=Додај иконицу за копирање поста на форуму заједно са референцама.
 foxtrick.ShowForumPrefButton.desc=Приказује иконицy за подешавање форума на свим страницама форума.
@@ -486,9 +492,9 @@ ForumSpecialBBCode.clock=додај тренутно време
 ForumSpecialBBCode.spoiler=додај споилер
 ForumSpecialBBCode.pre=додај 'pre' формат таг
 ForumSpecialBBCode.table=додај тагове за табелу.Нови ред раздваја врсте а ћелије се тренутно одвајају знаком "%s"
-ForumSpecialBBCode.tableSeparator=Ћелије раздвој знаком "%s"
+ForumSpecialBBCode.tableSeparator=Ћелије раздвој знаком %s
 ForumSpecialBBCode.enterSeparator=Убаци сопствени знак (сепаратор)
-ForumSpecialBBCode.forumSymbol=Убаци "%s"
+ForumSpecialBBCode.forumSymbol=%s
 ForumSpecialBBCode.symbols=Убаци симбол: %s
 
 
