--- a/content/locale/de/htlang.xml
+++ b/content/locale/de/htlang.xml
@@ -32,7 +32,7 @@
 		<position type="Keeper" value="Torwart" short="T" />
 		<position type="Central defender" value="Innenverteidiger" short="Iv" />
 		<position type="Wing back" value="Außenverteidiger" short="Av" />
-		<position type="Inner midfielder" value="zentrales Mittelfeld" short="zM" />
+		<position type="Inner midfielder" value="zentraler Mittelfeldspieler" short="zM" />
 		<position type="Winger" value="Flügelspieler" short="Fl" />
 		<position type="Forward" value="Stürmer" short="St" />
 	</positions>
@@ -72,7 +72,7 @@
 		<level text="nicht vorhanden" value="0" />
 	</levels>
 
-		<agreeability>
+	<agreeability>
 		<level text="eine Integrationsfigur" value="5" />
 		<level text="ein beliebter Spieler" value="4" />
 		<level text="ein sympathischer Mensch" value="3" />
