Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7879 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -81,9 +81,10 @@ foxtrick.FormatPostingText.desc=Замењује Фокстрикове HT-ML т
 foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Приказује цитате у постовима као споилер. Упишите број нивоа цитата који желите да буде замењен споилерима у поље испод.
 #EmbedMedia
 foxtrick.EmbedMedia.desc=Препознаје линкове ка медија фајловима и уграђује их директно у сајт. (Експериментална опција)
-foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Угради YouTube видео фајлове
-foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Угради Vimeo видео фајлове
-foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=Угради FunnyOrDie видео фајлове
+foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Угради YouTube видео клипове
+foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Угради Vimeo видео клипове
+foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=Угради FunnyOrDie видео клипове
+foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Угради Dailymotion видео клипове
 #
 foxtrick.CopyPostID.desc=Преусмеравање ПостИД-а.
 foxtrick.CopyPosting.desc=Додај иконицу за копирање поста на форуму заједно са референцама.
@@ -627,6 +628,8 @@ match.role.setPieces.abbr=ПР
 match.role.captain=Капитен
 match.role.captain.abbr=Кап.
 
+match.player.unknown=Непознат играч
+
 General=Опште карактеристике
 
 PlayerNumber=Број дреса
@@ -812,6 +815,9 @@ MatchReportFormat.lineup=Поставе
 MatchReportFormat.kickOff=Почетак
 MatchReportFormat.halfTime=Полувреме
 MatchReportFormat.fullTime=Крај
+MatchReportFormat.extraTime=Продужеци
+MatchReportFormat.penaltyShootOut=Пенали
+MatchReportFormat.result=Резултат
 
 CopySelected.desc=Копирај селектовано са 'Ctrl+C'
 SpecialPaste.desc='Paste' са 'Shift + леви клик мишем'.
