German Translation Update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7889 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -667,7 +667,7 @@ Last_stars.abbr=Str
 
 Last_position=Letzte Position
 Last_position.abbr=Pos
-
+Last_match_played_as=Spielte zuletzt %1 Minuten als %2.
 
 Bruised=Angeschlagen
 Bruised.abbr=Ang
@@ -796,9 +796,13 @@ CopyYouth.fixturesSource=Kopiere HTML Quellcode
 CopyYouth.fixturesSource.copied=HTML Quellcode wurde in die Zwischenablage kopiert.
 CopyYouth.goto=Gehe zu %s
 
-
-
-
+MatchReportFormat.lineup=Aufstellung
+MatchReportFormat.kickOff=Anstoß
+MatchReportFormat.halfTime=Halbzeitpause
+MatchReportFormat.fullTime=Ende der regulären Spielzeit
+MatchReportFormat.extraTime=Verlängerung
+MatchReportFormat.penaltyShootOut=Elfmeterschießen
+MatchReportFormat.result=Endergebnis
 
 CopySelected.desc=Auswahl mit Strg+C kopieren.
 SpecialPaste.desc=Einfügen mit Umschalt + Linksklick.
