locale/es_ca: apply patch by joseant.mg. (Fixes #858)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7922 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es_ca/foxtrick.properties
+++ b/content/locale/es_ca/foxtrick.properties
@@ -674,7 +674,7 @@ notify.newForumMessage=Has recibido %s nuevo(s) mensaje(s) en el foro.
 
 htLive=HT Live
 
-foxtrick.modules_allpages=Módulos que se ejecutan en todas las páginas
+foxtrick.modules_allpages=Módulos globales
 HTLanguageChanged=Has seleccionado en las preferencias de Foxtrick, que el idioma de Foxtrick se adapte automáticamente cuando escojas otro idiona en HT. El idioma de Foxtrick es: %s.
 
 Coach=Entrenador
@@ -808,7 +808,7 @@ Senior=Mayor
 Youth=Juvenil
 
 team.status.booked=Amistoso pactado
-ShowFriendlyBooked.ShowFriendlies=Mostrar amistosos friendlies
+ShowFriendlies=Mostrar amistosos friendlies
 
 
 # TransferSearchResultFilters
@@ -1028,7 +1028,7 @@ about.developers=Desarrolladores
 about.translators=Traductores
 about.designers=Deseñadores
 
-prefs.view.by.category=Ver por cateoría
+prefs.view.by.category=Ver por categoría
 prefs.view.by.page=Ver de acuerdo a última página de HT
 
 delete_foxtrick_branches_ask=¿Estas seguro que deseas restaurar los valores predeterminados de Foxtrick?\nFirefox debe reiniciarse para que los cambios tomen efecto!
