locale es / es_ca : Partly reverts r7921 caused by patches in #857 and #858 (ShowFriendlyBooked.ShowFriendlies was renamed to ShowFriendlies for some reason.)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7923 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es/foxtrick.properties
+++ b/content/locale/es/foxtrick.properties
@@ -789,7 +789,7 @@ Senior=Adulto
 Youth=Juvenil
 
 team.status.booked=Amistoso pactado
-ShowFriendlies=Mostrar amistosos
+ShowFriendlyBooked.ShowFriendlies=Mostrar amistosos
 
 
 # TransferSearchResultFilters
