--- a/content/locale/es_ca/foxtrick.properties
+++ b/content/locale/es_ca/foxtrick.properties
@@ -808,7 +808,7 @@ Senior=Mayor
 Youth=Juvenil
 
 team.status.booked=Amistoso pactado
-ShowFriendlies=Mostrar amistosos friendlies
+ShowFriendlyBooked.ShowFriendlies=Mostrar amistosos friendlies
 
 
 # TransferSearchResultFilters
