lt-LT: tab titles & main tab
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7945 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -750,7 +750,7 @@ foxtrick.linkscustom.addpersonallink=Pridėti asmeninę nuorodą
 foxtrick.linkscustom.addlink=Pridėti nuorodą
 foxtrick.linkscustom.remove=Ištrinti
 foxtrick.linkscustom.copy=Kopijuoti
-foxtrick.linkscustom.export=Išsaugoti
+foxtrick.linkscustom.export=Eksportuoti
 foxtrick.linkscustom.confirmremove=Tikrai norite ištrinti?
 foxtrick.linkscustom.addtag=Pridėti žymę
 foxtrick.linkscustom.tags=Žymės
@@ -1041,12 +1041,12 @@ button.save=Išsaugoti
 button.go=Eiti į žinutę
 button.add=Add
 button.remove=Remove
-button.top=Top
+button.top=Viršun
 button.authorize=Authorize
-button.export=Išsaugoti
+button.export=Exportuoti
 button.import=Įkelti
 button.restoreDefault=Atstatyti pradinius nustatymus
-button.deleteToken=Delete token
+button.deleteToken=Panaikinti prieigą
 button.disableAll=Išjungti viską
 
 status.loading=Loading…
@@ -1089,46 +1089,46 @@ prefs.screenshot=Screenshot
 # tabs in preferences page
 #tabs
 tab.main=Pagrindiniai nustatymai
-tab.on_page=Modules on this page
-tab.universal=Universal modules
-tab.informationAggregation=Information Aggregation
+tab.on_page=Moduliai šiame puslapyje
+tab.universal=Bendri moduliai
+tab.informationAggregation=Informacijos rinkimas
 tab.shortcutsAndTweaks=Nuorodos ir priedai
 tab.presentation=Išvaizda ir patobulinimai
 tab.matches=Rungtynės
 tab.forum=Forumas
 tab.links=Nuorodos
-tab.alert=Alert
+tab.alert=Pranešimai
 tab.about=Apie
-tab.changes=Changes
-tab.help=Help
+tab.changes=Šioje versijoje...
+tab.help=Pagalba
 
-foxtrick.prefs.setup=Setup
-foxtrick.prefs.setup.desc=These are your settings that FoxTrick detected. If incorrect, {please report}.
+foxtrick.prefs.setup=Sąranka
+foxtrick.prefs.setup.desc=FoxTrick automatiškai aptiko šiuos nustatymus. {Prašome pranešti}, jei jie yra neteisingi.
 foxtrick.prefs.setup.locale=Kalba
 foxtrick.prefs.setup.dateFormat=Datos formatas
 foxtrick.prefs.setup.country=Šalis
 
 foxtrick.prefs.captionCleanupBranch=Išsaugoti nustatymai
-foxtrick.prefs.captionLoadSavePrefs=Išsaugoti arba įkelti nustatymus
+foxtrick.prefs.captionLoadSavePrefs=Eksportuoti arba įkelti nustatymus
 foxtrick.prefs.labelCleanupBranch=Atstatyti pradinius Foxtrick nustatymus (asmeniniai duomenys lieka)
-foxtrick.prefs.oauth.delete=Delete OAuth token/secret for the selected team.
+foxtrick.prefs.oauth.delete=Panaikinti CHPP prieigą pasirinktai komandai.
 # NOTE - please preserve the braces, inner content will be converted to link
-foxtrick.prefs.oauth.delete.desc=Only applies to this browser. To entirely revoke FoxTrick's access for a team, use Hattrick's {CHPP management}.
+foxtrick.prefs.oauth.delete.desc=Galioja tik šiai naršyklei. Jei norite visiškai panaikinti leidimą Foxtrick pasiekti Jūsų komandos duomenis, tai galite padaryti Hattrick puslapyje „{CHPP produktų valdymas}“.
 foxtrick.prefs.labelDisableAll=Išjungti visus Foxtrick modulius
-foxtrick.prefs.labelSavePrefs=Išsaugoti nustatymus ir (ar) asmeninius duomenis
+foxtrick.prefs.labelSavePrefs=Eksportuoti nustatymus ir (ar) asmeninius duomenis
 foxtrick.prefs.labelSavePrefs_Prefs=Nustatymai
 foxtrick.prefs.labelSavePrefs_Notes=Asmeniniai duomenys (šablonai, nuorodos ir sandorių paieškos filtrai)
-foxtrick.prefs.saveNotice=Copy the content in the text area and save as a file, so you could import the preferences in the future.
+foxtrick.prefs.saveNotice=Nukopijuokite teksto lauko turinį ir išsaugokite rinkmenoje, kad ateityje galėtumėte nustatymus įkelti atgal.
 foxtrick.prefs.labelLoadPrefs=Įkelti nustatymus (dabartiniai nustatymai perrašomi).
-foxtrick.prefs.loadNotice=Paste your saved preferences in the text area and press "Import" to import your preferences.
-foxtrick.prefs.captionDisableSettings=Disable FoxTrick
+foxtrick.prefs.loadNotice=Įterpkite išsaugotus nustatymus teksto lauke ir paspauskite „Įkelti“.
+foxtrick.prefs.captionDisableSettings=Išjungti FoxTrick
 foxtrick.prefs.stagepref=Išjungti Foxtrick Stage serveryje
 foxtrick.prefs.disableTemporaryLabel=Laikinai išjungti Foxtrick
-foxtrick.prefs.saved=Preferences saved!
-foxtrick.prefs.loaded=Preferences loaded!
-foxtrick.prefs.dismissNotice=(click to dismiss this notice)
+foxtrick.prefs.saved=Nustatymai išsaugoti!
+foxtrick.prefs.loaded=Nustatymai įkelti!
+foxtrick.prefs.dismissNotice=(spustelėkite pranešimui uždaryti)
 
-pref.xmlLoad=Load XMLs for extra information from Hattrick
+pref.xmlLoad=Parsisiųsti daugiau informacijos CHPP sąsaja
 
 link.title=Links
 link.homepage=Homepage
@@ -1152,16 +1152,16 @@ about.developers=Developers
 about.translators=Translators
 about.designers=Designers
 
-prefs.view.by.category=View by category
-prefs.view.by.page=View by last HT page
+prefs.view.by.category=Rodyti funkcijų kategorijas
+prefs.view.by.page=Rodyti paskutinio HT puslapio funkcijas
 
 delete_foxtrick_branches_ask=Ar tikrai norite atstatyti pradinius nustatymus?
 delete_oauth_ask=Delete OAuth token/secret for teamid %s?
 disable_all_foxtrick_modules_ask=Ar tikrai norite išjungti visus patobulinimus?
 
-foxtrick.prefs.AdditionalOptions=General options
-foxtrick.prefs.smallcopyicons=Show copy icons in the header instead of sidebar
-foxtrick.prefs.DisplayHTMLDebugOutput=Show FoxTrick log on bottom of pages (for debugging)
+foxtrick.prefs.AdditionalOptions=Bendri nustatymai
+foxtrick.prefs.smallcopyicons=Rodyti kopijavimo ikonas antraštėje, o ne paraštėje
+foxtrick.prefs.DisplayHTMLDebugOutput=Rodyti FoxTrick veiklos žurnalą puslapių apačioje (programuotojams)
 
 
 ###EOF
