lt-LT: about tab
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7946 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -1146,11 +1146,11 @@ module.link=You can copy and paste this link to the forum to direct here
 foxtrick.showReleaseNotes=Show release notes after every update
 foxtrick.versionReleaseNotes=Show release notes for:
 
-about.copyright=Copyright
-about.maintainers=Maintainers
-about.developers=Developers
-about.translators=Translators
-about.designers=Designers
+about.copyright=Autorių teisės
+about.maintainers=Projekto valdytojai
+about.developers=Programuotojai
+about.translators=Vertėjai
+about.designers=Stilistai
 
 prefs.view.by.category=Rodyti funkcijų kategorijas
 prefs.view.by.page=Rodyti paskutinio HT puslapio funkcijas
