lt-LT: small typo
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7947 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/release-notes.xml
+++ b/content/locale/lt/release-notes.xml
@@ -43,7 +43,7 @@
 <item>FoxTrick ikona Firefox naršyklėje perkelta į adresų juostą (galima nutempti kur patinka). (ryanli)</item>
 <item>FoxTrick ikona Chrome naršyklėje perkelta į adresų juostą. Panaikintas mirgėjimas ir padidinta sparta. (convincedd)</item>
 <item>FoxTrick dabar veikia ir Fennec (Firefox mobiliesiems) naršyklėje. (convincedd)</item>
-<item>Atsirado FoxTrick beta versijos Opera ir Safari narųyklėms. (convincedd, ryanli)</item>
+<item>Atsirado FoxTrick beta versijos Opera ir Safari naršyklėms. (convincedd, ryanli)</item>
 <item>Smulkūs pataisymai ir patobulinimai. (convincedd, ryanli)</item>
 </note>
 
