lt-LT: changes tab
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7948 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -1143,7 +1143,7 @@ link.recentChanges=Recent changes
 
 module.link=You can copy and paste this link to the forum to direct here
 
-foxtrick.showReleaseNotes=Show release notes after every update
+foxtrick.showReleaseNotes=Rodyti versijos informaciją po kiekvieno atnaujinimo
 foxtrick.versionReleaseNotes=Show release notes for:
 
 about.copyright=Autorių teisės
