lt-LT: help tab
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7949 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -1130,21 +1130,21 @@ foxtrick.prefs.dismissNotice=(spustelėkite pranešimui uždaryti)
 
 pref.xmlLoad=Parsisiųsti daugiau informacijos CHPP sąsaja
 
-link.title=Links
-link.homepage=Homepage
-link.bugTracker=Report a bug
-link.hattrickForum=FoxTrick forum at Hattrick
-link.screenshots=Screenshots
-link.nightlyFirefox=Development builds for Firefox
-link.nightlyChrome=Development builds for Google Chrome
-link.nightlyOpera=Development builds for Opera
-link.nightlySafari=Development builds for Safari
-link.recentChanges=Recent changes
+link.title=Nuorodos
+link.homepage=Foxtrick tinklalapis
+link.bugTracker=Pranešti apie klaidą
+link.hattrickForum=FoxTrick forumas Hattrick puslapyje
+link.screenshots=Momentinės ekrano nuotraukos
+link.nightlyFirefox=Momentinės versijos: Firefox
+link.nightlyChrome=Momentinės versijos: Google Chrome
+link.nightlyOpera=Momentinės versijos: Opera
+link.nightlySafari=Momentinės versijos: Safari
+link.recentChanges=Pakeitimų sąrašas
 
 module.link=You can copy and paste this link to the forum to direct here
 
 foxtrick.showReleaseNotes=Rodyti versijos informaciją po kiekvieno atnaujinimo
-foxtrick.versionReleaseNotes=Show release notes for:
+foxtrick.versionReleaseNotes=Rodyti versijos informaciją:
 
 about.copyright=Autorių teisės
 about.maintainers=Projekto valdytojai
